CodeBaseServer2020/development/CBS653_SRVRECOVER/d4declar.h

S4EXPORT DATA4 S4PTR *S4FUNCTION code4data( CODE4 S4PTR *, const char S4PTR * ) ;
S4EXPORT const char S4PTR * S4FUNCTION code4indexExtension( CODE4 S4PTR * ) ;
S4EXPORT CODE4 S4PTR* S4FUNCTION code4initVB( void ) ;
S4EXPORT int S4FUNCTION code4initUndo( CODE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION code4lock( CODE4 S4PTR * ) ;
S4EXPORT void S4FUNCTION code4largeOn( CODE4 S4PTR * ) ;
S4EXPORT void S4FUNCTION code4lockClear( CODE4 S4PTR * ) ;
S4EXPORT const char S4PTR *S4FUNCTION code4lockFileName( CODE4 S4PTR * ) ;
S4EXPORT long S4FUNCTION code4lockItem( CODE4 S4PTR * ) ;
S4EXPORT const char S4PTR *S4FUNCTION code4lockNetworkId( CODE4 S4PTR * ) ;
S4EXPORT const char S4PTR *S4FUNCTION code4lockUserId( CODE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION code4optStart( CODE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION code4optSuspend( CODE4 S4PTR * ) ;
S4EXPORT int S4FUNCTION code4unlock( CODE4 S4PTR * ) ;
   #define code4init( c4 ) ( code4initLow( (c4), DEF4PROTOCOL, S4VERSION, sizeof( CODE4 ), 0 ) )
   #define code4init( c4 ) ( code4initLow( (c4), 0, S4VERSION, sizeof( CODE4 ), 0 ) )
   S4EXPORT int S4FUNCTION code4unlockAuto( CODE4 * ) ;
   S4EXPORT int S4FUNCTION code4close( CODE4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION code4connect( CODE4 S4PTR *, const char S4PTR *, const char S4PTR *, const char S4PTR *, const char S4PTR *, const char S4PTR * ) ;
   S4EXPORT const char S4PTR *S4FUNCTION code4dateFormat( CODE4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION code4dateFormatSet( CODE4 S4PTR *, const char S4PTR * ) ;
      S4EXPORT void S4FUNCTION code4exit( CODE4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION code4flush( CODE4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION code4optAll( CODE4 S4PTR * ) ;
   S4EXPORT int S4FUNCTION code4logCreate( CODE4 S4PTR *, const char S4PTR *, const char S4PTR * ) ;
   S4EXPORT int S4FUNCTION code4logOpen( CODE4 S4PTR *, const char S4PTR *, const char S4PTR * ) ;
   S4EXPORT void S4FUNCTION code4logOpenOff( CODE4 S4PTR * ) ;
         #define code4unlockAuto( c4 ) ( 0 )
         #define code4unlockAuto( c4 ) ( (c4)->c4trans.trans.unlockAuto )
      int S4FUNCTION code4unlockAuto( CODE4 * ) ;
   S4EXPORT short S4FUNCTION code4unlockAutoCB( CODE4 * ) ;
   S4EXPORT short S4FUNCTION code4unlockAutoSetCB( CODE4 *, short ) ;
   #define code4unlockAutoSet( c4, val ) ( (c4)->currentClient->trans.unlockAuto = (val) )
         #define code4unlockAutoSet( c4, val ) ( 0 )
         #define code4unlockAutoSet( c4, val ) ( (c4)->c4trans.trans.unlockAuto = (val) )
      #define code4unlockAutoSet( c4, val ) code4unlockAutoSetDo( (c4), (val) )
      S4EXPORT short S4FUNCTION code4autoOpen( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4codePage( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4collatingSequence( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4compatibility( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4createTemp( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errCreate( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errDefaultUnique( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errorCode( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4accessMode( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errExpr( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errFieldName( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4fileFlush( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errGo( CODE4 *cb, short value ) ;
      S4EXPORT long  S4FUNCTION code4hInst( CODE4 *cb, long value ) ;
      S4EXPORT long  S4FUNCTION code4hWnd( CODE4 *cb, long value ) ;
      S4EXPORT short S4FUNCTION code4lockAttempts( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4lockAttemptsSingle( CODE4 *cb, short value ) ;
      S4EXPORT long  S4FUNCTION code4lockDelay( CODE4 *cb, long value ) ;
      S4EXPORT short S4FUNCTION code4lockEnforce( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4log( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memExpandBlock( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memExpandData( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memExpandIndex( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memExpandLock( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memExpandTag( CODE4 *cb, short value ) ;
      S4EXPORT long  S4FUNCTION code4memSizeBlock( CODE4 *cb, long value ) ;
      S4EXPORT long  S4FUNCTION code4memSizeBuffer( CODE4 *cb, long value ) ;
      S4EXPORT short S4FUNCTION code4memSizeMemo( CODE4 *cb, short value ) ;
      S4EXPORT long  S4FUNCTION code4memSizeMemoExpr( CODE4 *cb, long value ) ;
      S4EXPORT long  S4FUNCTION code4memSizeSortBuffer( CODE4 *cb, long value ) ;
      S4EXPORT long  S4FUNCTION code4memSizeSortPool( CODE4 *cb, long value ) ;
      S4EXPORT short S4FUNCTION code4memStartBlock( CODE4 *cb, short value ) ;
      S4EXPORT long  S4FUNCTION code4memStartMax( CODE4 *cb, long value ) ;
      S4EXPORT short S4FUNCTION code4memStartData( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memStartIndex( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memStartLock( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4memStartTag( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errOff( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errOpen( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4optimize( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4optimizeWrite( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4readLock( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4readOnly( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errRelate( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4safety( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4singleOpen( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errSkip( CODE4 *cb, short value ) ;
      S4EXPORT short S4FUNCTION code4errTagName( CODE4 *cb, short value ) ;
   S4EXPORT void S4FUNCTION code4verifySet( CODE4 S4PTR *, const char S4PTR * ) ;
            #define code4collateName( c4 ) ( (c4)->collateName )
            #define code4collateNameUnicode( c4 ) ( (c4)->collateNameUnicode )
            #define code4collateName( c4 ) ( collate4none )
            #define code4collateNameUnicode( c4 ) ( collate4none )
         S4EXPORT enum Collate4name S4FUNCTION code4collateName( CODE4 * ) ;
         S4EXPORT enum Collate4name S4FUNCTION code4collateNameUnicode( CODE4 * ) ;
      S4EXPORT void S4FUNCTION code4collateNameSet( CODE4 *, enum Collate4name ) ;
      S4EXPORT void S4FUNCTION code4collateNameUnicodeSet( CODE4 *, enum Collate4name ) ;
   S4EXPORT short S4FUNCTION code4compatibility( CODE4 *, short ) ;