CodeBaseServer2020/development/SpeedDemo/CODEBASE.BAS

' codebase.bas  (c)Copyright Sequiter Software Inc., 1988-1999.  All rights reserved.

'Data Types Used by CodeBase

Type FIELD4INFOCB
    fName As Long        ' C string (which is different than a Basic String)
    ftype As Integer
    flength As Integer
    fdecimals As Integer
    fnulls As Integer
End Type

Type FIELD4INFO          ' Corresponding Basic structure
    fName As String
    ftype As String * 1
    flength As Integer
    fdecimals As Integer
    fnulls As Integer
End Type

Type TAG4INFOCB
    name As Long         ' C string
    expression As Long   ' C string
    filter As Long       ' C string
    unique As Integer
    descending As Integer
End Type

Type TAG4INFO
    name As String
    expression As String
    filter As String
    unique As Integer
    descending As Integer
End Type

'===================================================================================
'
'     CODE4 Access  function prototypes
'
'===================================================================================

Declare Function code4accessMode% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4autoOpen% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4calcCreate% Lib "cb6demo.dll" (ByVal c4&, ByVal expr4&, ByVal fcnName$)
Declare Sub code4calcReset Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4codePage% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4collatingSequence% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4collateName& Lib "cb6demo.dll" (ByVal c4&)
Declare Sub code4collateNameSet Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4collateNameUnicode& Lib "cb6demo.dll" (ByVal c4&)
Declare Sub code4collateNameUnicodeSet Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4compatibility% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4connect% Lib "cb6demo.dll" (ByVal c4&, ByVal serverId$, ByVal processId$, ByVal userName$, ByVal password$, ByVal protocol$)
Declare Function code4close% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4createTemp% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4data& Lib "cb6demo.dll" (ByVal c4&, ByVal AliasName$)
Declare Function code4dateFormatVB& Lib "cb6demo.dll" Alias "code4dateFormat" (ByVal c4&)
Declare Function code4dateFormatSet% Lib "cb6demo.dll" (ByVal c4&, ByVal fmt$)
Declare Function code4errCreate% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errDefaultUnique% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errorCode% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errExpr% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errFieldName% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errGo% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errSkip% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errTagName% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Sub code4exit Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4fileFlush% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4flush% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4hInst% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4indexExtensionVB& Lib "cb6demo.dll" Alias "code4indexExtension" (ByVal c4&)
Declare Function code4hWnd& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4init& Lib "cb6demo.dll" Alias "code4initVB" ()
Declare Function code4initUndo% Lib "cb6demo.dll" (ByVal c4&)
Declare Sub code4largeOn Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4lock% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4lockAttempts% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4lockAttemptsSingle% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Sub code4lockClear Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4lockDelay& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4lockEnforce% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4lockFileNameVB& Lib "cb6demo.dll" Alias "code4lockFileName" (ByVal c4&)
Declare Function code4lockItem& Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4lockNetworkIdVB& Lib "cb6demo.dll" Alias "code4lockNetworkId" (ByVal c4&)
Declare Function code4lockUserIdVB& Lib "cb6demo.dll" Alias "code4lockUserId" (ByVal c4&)
Declare Function code4log% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4logCreate% Lib "cb6demo.dll" (ByVal c4&, ByVal logName$, ByVal userId$)
Declare Function code4logFileNameVB& Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4logOpen% Lib "cb6demo.dll" (ByVal c4&, ByVal logName$, ByVal userId$)
Declare Sub code4logOpenOff Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4memExpandBlock% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memExpandData% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memExpandIndex% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memExpandLock% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memExpandTag% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memSizeBlock& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4memSizeBuffer& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4memSizeMemo% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memSizeMemoExpr& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4memSizeSortBuffer& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4memSizeSortPool& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4memStartBlock% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memStartData% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memStartIndex% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memStartLock% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4memStartMax& Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4memStartTag% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errOff% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errOpen% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4optAll% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4optimize% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4optStart% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4optSuspend% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4optimizeWrite% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4readLock% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4readOnly% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4errRelate% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4safety% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4singleOpen% Lib "cb6demo.dll" (ByVal c4&, ByVal value%)
Declare Function code4timeout& Lib "cb6demo.dll" (ByVal c4&)
Declare Sub code4timeoutSet Lib "cb6demo.dll" (ByVal c4&, ByVal value&)
Declare Function code4tranStart% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4tranStatus% Lib "cb6demo.dll" Alias "code4tranStatusCB" (ByVal c4&)
Declare Function code4tranCommit% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4tranRollback% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4unlock% Lib "cb6demo.dll" (ByVal c4&)
Declare Function code4unlockAuto% Lib "cb6demo.dll" Alias "code4unlockAutoCB" (ByVal c4&)
Declare Sub code4unlockAutoSet Lib "cb6demo.dll" Alias "code4unlockAutoSetCB" (ByVal c4&, ByVal value%)
Declare Sub code4verifySet Lib "cb6demo.dll" (ByVal c4&, ByVal value$)

'===============================================================================================
'
'                                 CodeControls function prototypes
'
'-----------------------------------------------------------------------------------------------

Declare Function ctrl4init Lib "cc2.vbx" Alias "ctrl4initVB" () As Long
Declare Function ctrl4initUndo Lib "cc2.vbx" Alias "ctrl4initUndoVB" (ByVal code As Long) As Integer
